k8s/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joke-proxy
  labels:
    app: joke-proxy
spec:
  selector:
    app: joke-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
