k8s/app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joke-proxy-ingress
  labels:
    app: joke-proxy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: joke-proxy.127.0.0.1.nip.io  # For local development
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: joke-proxy
            port:
              number: 80
